--- a/ar.html
+++ b/ar.html
@@ -33,7 +33,7 @@
 <body style="background-color: #cdb189;">
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="./page1.glb"
+    <model-viewer src="./vaada_poster.glb"
                   ios-src="./envday.usdz"
                   alt="World Environment Day"
                   shadow-intensity="1"
