--- a/ar.html
+++ b/ar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>World Environment Day 2020</title>
+    <title>SpeedUP - Vaada</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
 
   </head> 
-<body style="background-color: #cdb189;">
+<body style="background-color: #f2bc57;">
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
     <model-viewer src="./vaada_poster.glb"
@@ -43,8 +43,8 @@
     </model-viewer>
     <section class="attribution">
       <span>
-        <h1>World Environment Day 2020</h1>
-        <span>from the Makers of INVOLON DS</a></span>
+        <h1>VAADA</h1>
+        <span>A complete Promise to Deliver</a></span>
       </span>
       
     </section>
@@ -66,7 +66,7 @@
   
     </div>
 
-    <footer><a style="color: #cdb189; font-weight: 30;font-size: small;" >made in Love with Nature by </a><a style="color: white; font-weight: 30;font-size: medium;" >Natural Remedies Pvt Ltd</a></footer>
+    <footer><a style="columns: #000000;; font-weight: 30;font-size: small;">made in Love with cows by </a><a style="color: white; font-weight: 30;font-size: medium;" >Natural Remedies Pvt Ltd</a></footer>
  
   
   
