--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <body style="background-color: #cdb189;">
     <div id="aa">
 
-        <img src="badge.jpg" style="widows: 500px;px; height: 500px;"> 
+        <img src="vaadabadge.png" style="widows: 500px;px; height: 500px;"> 
         
-        <h1>Let's Plant a Tree</h1>
+        <h1>Speed-UP</h1>
+        <a>VAADA Campaign Launch</a>
         <form action="ar.html">
-            <input type="submit" class="btn" value="    Click Here   ">
+            <input type="submit" class="btn" value="    Click Here   "><br>
+
+            <input type="submit" class="btn" value="    View Poster PDF  ">
         </form>
         </div>
 
