--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <h1>Speed-UP</h1>
         <a>VAADA Campaign Launch</a>
         <form action="ar.html">
-            <input type="submit" class="btn" value="    Click Here   "><br>
-
+            <input type="submit" class="btn" value="    Click Here   ">
+        </form>   
+            <br>
+        <form action="vaada.pdf">
             <input type="submit" class="btn" value="    View Poster PDF  ">
         </form>
         </div>
