--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <link rel="stylesheet" href="style.css">
-<body style="background-color: #cdb189;">
+<body style="background-color: #f2bc57;">
     <div id="aa">
 
         <img src="vaadabadge.png" style="widows: 500px;px; height: 500px;"> 
