--- a/ar.html
+++ b/ar.html
@@ -34,8 +34,8 @@
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
     <model-viewer src="./vaada_poster.glb"
-                  ios-src="./envday.usdz"
-                  alt="World Environment Day"
+                  ios-src="./Experience.usdz"
+                  alt="Speedup Vaada"
                   shadow-intensity="1"
                   camera-controls
                   interaction-prompt="auto"
