--- a/ar.html
+++ b/ar.html
@@ -33,8 +33,8 @@
 <body style="background-color: #f2bc57;">
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="./vaada_poster.glb"
-                  ios-src="./Experience.usdz"
+    <model-viewer ios-src="./Experience.usdz"
+                  src="./vaada_poster.glb"
                   alt="Speedup Vaada"
                   shadow-intensity="1"
                   camera-controls
