--- a/ar.html
+++ b/ar.html
@@ -34,7 +34,7 @@
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
     <model-viewer ios-src="./Experience.usdz"
-                  src="./img.glb"
+                  src="./vaada_poster.glb"
                   alt="Speedup Vaada"
                   shadow-intensity="1"
                   camera-controls
