--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color: #f2bc57;">
     <div id="aa">
 
-        <img src="vaadabadge.png" style="widows: 500px;px; height: 500px;"> 
+        <img src="vaadabadge.png" style="width:vw;"> 
         
         <h1>Speed-UP</h1>
         <a>VAADA Campaign Launch</a>
