--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <img src="vaadabadge.png" style="width:vw;"> 
         
-        <h1>Speed-UP</h1>
+        <a style="fontsize=20px">Speed-UP<a>
         <a>VAADA Campaign Launch</a>
         <form action="ar.html">
             <input type="submit" class="btn" value="    Click Here   ">
