--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color: #f2bc57;">
     <div id="aa">
 
-        <img src="vaadabadge.png" style="width:vw;"> 
+        <img src="vaadabadge.png" style="width:700px;"> 
         
         <a style="fontsize=20px">Speed-UP<a>
         <a>VAADA Campaign Launch</a>
