--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <link rel="stylesheet" href="style.css">
-<body style="background-color: #f2bc57;">
+<body style="background-color: #f2bc57;text-align: center;">
     <div id="aa">
 
-        <img src="vaadabadge.png" style="width:500px;"> 
+        <img src="vaadabadge.png" style="width:500px;"> <br>
         
-        <a style="fontsize=20px">Speed-UP<a>
+        <a style="font-size: 50px;">Speed-UP<a><br>
         <a>VAADA Campaign Launch</a>
         <form action="ar.html">
             <input type="submit" class="btn" value="    Click Here   ">
