--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <img src="vaadabadge.png" style="width:500px;"> <br>
         
-        <a style="font-size: 50px;">Speed-UP<a><br>
+        <a style="font-size: 150px;font-weight: 600;">Speed-UP<a><br>
         <a>VAADA Campaign Launch</a>
         <form action="ar.html">
             <input type="submit" class="btn" value="    Click Here   ">
