--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <img src="vaadabadge.png" style="width:500px;"> <br>
         
         <a style="font-size: 150px;font-weight: 600;">Speed-UP<a><br>
-        <a>VAADA Campaign Launch</a>
+        <a style="font-size: 70px;font-weight: 600;">VAADA </a>
         <form action="ar.html">
             <input type="submit" class="btn" value="    Click Here   ">
         </form>   
