--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
         <img src="vaadabadge.png" style="width:500px;"> <br>
         
-        <a style="font-size: 70px;font-weight: 600;">SPEED-UP<a><br>
-        <a style="font-size: 70px;font-weight: 600;">VAADA </a>
+        <a style="font-size: 70px;font-weight: 600;color=#2f6bb0">SPEED-UP<a><br>
+        <a style="font-size: 70px;font-weight: 600;color=#ffffff">VAADA </a>
         <form action="ar.html">
             <input type="submit" class="btn" value="    Click Here   ">
         </form>   
