--- a/ar.html
+++ b/ar.html
@@ -53,7 +53,7 @@
     <div id="bb">
       
         <a style="color: white;">
-            <h3 style="text-align: center;color: #3c4e18;"><u>INSTRUCTIONS</u></h3>
+            <h3 style="text-align: center;color: #2f6bb0;"><u>INSTRUCTIONS</u></h3>
         <ol>
         <li>Move to bright environment</li>
         <li>Check for strong internet connectivity</li>
@@ -66,7 +66,7 @@
   
     </div>
 
-    <footer><a style="columns: #000000;; font-weight: 30;font-size: small;">made in Love with cows by </a><a style="color: white; font-weight: 30;font-size: medium;" >Natural Remedies Pvt Ltd</a></footer>
+    <footer><a style="columns: #000000;; font-weight: 30;font-size: small;">made in Love with Cows by </a><a style="color: white; font-weight: 30;font-size: medium;" >Natural Remedies Pvt Ltd</a></footer>
  
   
   
